plugins {
    id 'java'
    id "com.vanniktech.maven.publish" version "0.35.0"
}

group = 'io.github.hubertkuch'
version = '1.0.0'

repositories {
    mavenCentral()
}

java {
    sourceCompatibility = JavaVersion.VERSION_25
    targetCompatibility = JavaVersion.VERSION_25
}

mavenPublishing {
    coordinates(project.group, project.name, version)

    pom {
        name = "JKona"
        description = "Java native desktop library"
        inceptionYear = "2025"
        url = "https://github.com/hubertkuch/jkona/"
        licenses {
            license {
                name = "The Apache License, Version 2.0"
                url = "http://www.apache.org/licenses/LICENSE-2.0.txt"
                distribution = "http://www.apache.org/licenses/LICENSE-2.0.txt"
            }
        }
        developers {
            developer {
                id = "hubertkuch"
                name = "Hubert Kuch"
                url = "https://github.com/hubertkuch/"
            }
        }
        scm {
            url = "https://github.com/hubertkuch/jkona/"
            connection = "scm:git:git://github.com/hubertkuch/jkona.git"
            developerConnection = "scm:git:ssh://git@github.com/hubertkuch/jkona.git"
        }
    }
}


dependencies {
    implementation 'com.google.auto.factory:auto-factory:1.1.0'
    implementation("org.reflections:reflections:0.10.2")

    implementation("com.google.code.gson:gson:2.10.1")

    implementation 'org.slf4j:slf4j-api:2.0.13'
    implementation 'org.slf4j:slf4j-simple:2.0.13'

    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

test {
    useJUnitPlatform()
    jvmArgs += "--enable-preview"
}

afterEvaluate {
        tasks.named('generateMetadataFileForMavenPublication').configure {
            dependsOn(tasks.plainJavadocJar)
        }
}


tasks.withType(JavaCompile).configureEach {
    options.compilerArgs.add('--enable-preview')
}